homelab/sonarr/network.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonarr-server
  labels:
    app: sonarr
    role: server
spec:
  type: ClusterIP
  ports:
    - port: 8989
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: sonarr
    role: server

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonarr-server
  labels:
    app: sonarr
    role: server
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  tls:
    - hosts:
        - sonarr.dekiru.tech
      secretName: dekiru-tech-tls
  rules:
    - host: sonarr.dekiru.tech
      http:
        paths:
          - backend:
              service:
                name: sonarr-server
                port:
                  name: http
            path: /
            pathType: Prefix
